--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ footer {
 <section id="music">
   <h2>Listen to Our Tracks</h2>
   <audio controls>
-    <source src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\band\\track1.mp3" type="audio/mpeg">
+    <source src="track1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </section>
@@ -132,19 +132,19 @@ footer {
   <h2>Merchandise Store</h2>
   <div class="grid">
     <div class="card">
-      <img src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\mus web\\t.jpeg" alt="Band T-Shirt">
+      <img src="t.jpeg" alt="Band T-Shirt">
       <h3>Band T-Shirt</h3>
       <p>₹799</p>
       <button onclick="buyItem('Band T-Shirt')">Buy Now</button>
     </div>
     <div class="card">
-      <img src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\mus web\\c.jpeg" alt="Band Cap">
+      <img src="c.jpeg" alt="Band Cap">
       <h3>Band Cap</h3>
       <p>₹499</p>
       <button onclick="buyItem('Band Cap')">Buy Now</button>
     </div>
     <div class="card">
-      <img src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\mus web\\p.jpeg" alt="Band Poster">
+      <img src="p.jpeg" alt="Band Poster">
       <h3>Band Poster</h3>
       <p>₹299</p>
       <button onclick="buyItem('Band Poster')">Buy Now</button>
@@ -157,11 +157,11 @@ footer {
   <h2>Gallery</h2>
   <div class="grid">
     <div class="card">
-      <img src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\mus web\\l.jpeg" Performance alt="Live Show">
+      <img src="l.jpeg" Performance alt="Live Show">
       <h3>Live Show</h3>
     </div>
     <div class="card">
-      <img src="C:\\Users\\azaan\\Desktop\\College Acad\\Web Dev\\Experiments\\mus web\\p.jpeg" alt="Stage Performance">
+      <img src="p.jpeg" alt="Stage Performance">
       <h3>Stage Performance</h3>
     </div>
     <div class="card">
@@ -192,4 +192,5 @@ function buyItem(item) {
 }
 </script>
 </body>
+
 </html>
